fixed layout issue

--- a/style/templete.css
+++ b/style/templete.css
@@ -1,3 +1,34 @@
 .templete{
     background-color: var(--black-color);
 }
+
+.testimonial_say {
+    font-size: 2.5em;
+    color: var(--white-color);
+    line-height: 50px;
+    max-width: 950px;
+    font-weight: 600;
+}
+
+.templete_wrapper {
+    gap: 4em;
+    align-items: flex-start;
+}
+
+.templete_circle img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.templete_circle_title h1{
+    font-size: 1em;
+    color: var(--white-color);
+    font-weight: 600;
+}
+.templete_circle_title h3{
+    font-size: 0.8em;
+    color: #ffffffb3;
+    font-weight: 600;
+}
